--- a/index.html
+++ b/index.html
@@ -18,26 +18,28 @@
   <body>
     <!-- Шапка -->
     <header>
-      <div class="container">
-        <nav>
+      <div class="container header">
+        <nav class="header-nav">
           <a href="" class="logo link">
-            <span class="logo-web link">Web</span> Studio</a
+            <span class="logo-accent link">Web</span> Studio</a
           >
 
           <ul class="pages-nav list">
-            <li><a href="" class="link current">Студия</a></li>
-            <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-            <li><a href="" class="link">Контакты</a></li>
+            <li class="item"><a href="" class="link current">Студия</a></li>
+            <li class="item">
+              <a href="./portfolio.html" class="link">Портфолио</a>
+            </li>
+            <li class="item"><a href="" class="link">Контакты</a></li>
           </ul>
         </nav>
 
         <ul class="nav-contacts list">
-          <li>
+          <li class="item">
             <a href="mailto:info@devstudio.com" class="contacts link"
               >info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="item">
             <a href="tel:+380961111111" class="contacts link">
               +38 096 111 11 11</a
             >
@@ -59,7 +61,7 @@
           <h2 class="section-title">Особенности</h2>
 
           <ul class="features-list list">
-            <li>
+            <li class="item">
               <h3 class="title">Внимание к деталям</h3>
 
               <p class="text">
@@ -67,7 +69,7 @@
                 формированию позиции.
               </p>
             </li>
-            <li>
+            <li class="item">
               <h3 class="title">Пунктуалность</h3>
 
               <p class="text">
@@ -75,7 +77,7 @@
                 кадров влечет за собой.
               </p>
             </li>
-            <li>
+            <li class="item">
               <h3 class="title">Планирование</h3>
 
               <p class="text">
@@ -83,7 +85,7 @@
                 степени обуславливает.
               </p>
             </li>
-            <li>
+            <li class="item">
               <h3 class="title">Современные Технологии</h3>
               <p class="text">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -100,15 +102,15 @@
           <h2 class="section-title">Чем мы занимаемся</h2>
 
           <ul class="directions list">
-            <li>
+            <li class="item">
               <img src="./images/box-1.jpg" alt="Изображение Ноутбука" />
               <h3 class="direction-title">Десктопные приложения</h3>
             </li>
-            <li>
+            <li class="item">
               <img src="./images/box-2.jpg" alt="Изображение Смартфона" />
               <h3 class="direction-title">Мобильные приложения</h3>
             </li>
-            <li>
+            <li class="item">
               <img src="./images/box-3.jpg" alt="Изображение Монитора" />
               <h3 class="direction-title">Дизайнерские решения</h3>
             </li>
@@ -117,20 +119,22 @@
       </section>
 
       <!-- Наша команда -->
-      <section class="section">
+      <section class="section team">
         <div class="container">
           <h2 class="section-title">Наша Команда</h2>
 
           <ul class="team list">
-            <li>
-              <h3 class="team-title">Николай Кучеренко</h3>
-              <p class="team-position">Product Designer</p>
-
+            <li class="item">
               <img
+                class="img"
                 src="./images/team-1.jpg"
                 alt="Фотография Николая Кучеренко"
                 width="270"
               />
+
+              <h3 class="team-title">Николай Кучеренко</h3>
+              <p class="team-position">Product Designer</p>
+
               <ul>
                 <li>
                   <a href="" aria-label="Ссылка на Инстаграм">Инстаграм</a>
@@ -147,15 +151,17 @@
               </ul>
             </li>
 
-            <li>
-              <h3 class="team-title">Ольга Иванова</h3>
-              <p class="team-position">Frontend Developer</p>
-
+            <li class="item">
               <img
+                class="img"
                 src="./images/team-2.jpg"
                 alt="Фотография Ольги Ивановой"
                 width="270"
               />
+
+              <h3 class="team-title">Ольга Иванова</h3>
+              <p class="team-position">Frontend Developer</p>
+
               <ul>
                 <li>
                   <a href="" aria-label="Ссылка на Инстаграм">Инстаграм</a>
@@ -172,15 +178,17 @@
               </ul>
             </li>
 
-            <li>
-              <h3 class="team-title">Андрей Шевченко</h3>
-              <p class="team-position">Marketing</p>
-
+            <li class="item">
               <img
+                class="img"
                 src="./images/team-3.jpg"
                 alt="Фотография Андрея Шевченко"
                 width="270"
               />
+
+              <h3 class="team-title">Андрей Шевченко</h3>
+              <p class="team-position">Marketing</p>
+
               <ul>
                 <li>
                   <a href="" aria-label="Ссылка на Инстаграм">Инстаграм</a>
@@ -197,15 +205,17 @@
               </ul>
             </li>
 
-            <li>
-              <h3 class="team-title">Иван Николаев</h3>
-              <p class="team-position">UI Designer</p>
-
+            <li class="item">
               <img
+                class="img"
                 src="./images/team-4.jpg"
                 alt="Фотография Ивана Николаева"
                 width="270"
               />
+
+              <h3 class="team-title">Иван Николаев</h3>
+              <p class="team-position">UI Designer</p>
+
               <ul>
                 <li>
                   <a href="" aria-label="Ссылка на Инстаграм">Инстаграм</a>
@@ -227,29 +237,29 @@
 
       <!-- Постоянные клиенты -->
       <section class="section">
-        <div class="container">
+        <div class="container clients">
           <h2 class="section-title">Постоянные клиенты</h2>
 
-          <ul>
-            <li>
+          <ul class="list">
+            <li class="item">
               <a href="" aria-label="Ссылка на клиента">Клиент</a>
             </li>
 
-            <li>
+            <li class="item">
               <a href="" aria-label="Ссылка на клиента">Клиент</a>
             </li>
 
-            <li>
+            <li class="item">
               <a href="" aria-label="Ссылка на клиента">Клиент</a>
             </li>
 
-            <li>
+            <li class="item">
               <a href="" aria-label="Ссылка на клиента">Клиент</a>
             </li>
-            <li>
+            <li class="item">
               <a href="" aria-label="Ссылка на клиента">Клиент</a>
             </li>
-            <li>
+            <li class="item">
               <a href="" aria-label="Ссылка на клиента">Клиент</a>
             </li>
           </ul>
@@ -257,32 +267,45 @@
       </section>
     </main>
     <!-- Футер -->
-    <footer class="footer container">
-      <div>
-        <a href="" class="logo link">
-          <span class="logo-web link">Web</span> Studio</a
-        >
-      </div>
-      <div class="contacts">
-        <p>
-          <span class="adress">г. Киев, пр-т Леси Украинки, 26</span> <br />
-          <span class="mail">info@example.com</span> <br />
-          <span class="phone">+38 099 111 11 11</span> <br />
-        </p>
-      </div>
-      <div class="social">
-        <p>Присоединяйтесь</p>
-        <ul>
-          <li><a href="" aria-label="Ссылка на Instagram">Инстаграм</a></li>
-          <li><a href="" aria-label="Ссылка на Twitter">Твиттер</a></li>
-          <li><a href="" aria-label="Ссылка на Facebook">Фэйсбук</a></li>
-          <li><a href="" aria-label="Ссылка на LinkedIn">ЛинкедИн</a></li>
-        </ul>
-      </div>
+    <footer class="footer">
+      <div class="container footer-main">
+        <div class="logo-contacts">
+          <div class="footer-logo">
+            <a href="" class="logo link">
+              <span class="logo-accent link">Web</span> Studio</a
+            >
+          </div>
+          <div class="contacts">
+            <p class="contacts-text">
+              <span class="adress">г. Киев, пр-т Леси Украинки, 26</span> <br />
+              <span class="mail">info@example.com</span> <br />
+              <span class="phone">+38 099 111 11 11</span> <br />
+            </p>
+          </div>
+        </div>
 
-      <div class="subscribe">
-        <p>Подпишитесь на рассылку</p>
-        <button class="footer-btn">Подписаться</button>
+        <div class="social">
+          <p class="text">Присоединяйтесь</p>
+          <ul class="list">
+            <li class="item">
+              <a href="" aria-label="Ссылка на Instagram">Инстаграм</a>
+            </li>
+            <li class="item">
+              <a href="" aria-label="Ссылка на Twitter">Твиттер</a>
+            </li>
+            <li class="item">
+              <a href="" aria-label="Ссылка на Facebook">Фэйсбук</a>
+            </li>
+            <li class="item">
+              <a href="" aria-label="Ссылка на LinkedIn">ЛинкедИн</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="subscribe">
+          <p class="text">Подпишитесь на рассылку</p>
+          <button class="footer-btn">Подписаться</button>
+        </div>
       </div>
     </footer>
   </body>
