--- a/portfolio.html
+++ b/portfolio.html
@@ -18,28 +18,28 @@
   <body>
     <!-- Шапка -->
     <header>
-      <div class="container">
-        <nav>
+      <div class="container header">
+        <nav class="header-nav">
           <a href="" class="logo link">
-            <span class="logo-web link">Web</span> Studio</a
+            <span class="logo-accent link">Web</span> Studio</a
           >
 
           <ul class="pages-nav list">
-            <li><a href="./index.html" class="link">Студия</a></li>
-            <li>
+            <li class="item"><a href="./index.html" class="link">Студия</a></li>
+            <li class="item">
               <a href="./portfolio.html" class="link current">Портфолио</a>
             </li>
-            <li><a href="" class="link">Контакты</a></li>
+            <li class="item"><a href="" class="link">Контакты</a></li>
           </ul>
         </nav>
 
         <ul class="nav-contacts list">
-          <li>
+          <li class="item">
             <a href="mailto:info@devstudio.com" class="contacts link"
               >info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="item">
             <a href="tel:+380961111111" class="contacts link">
               +38 096 111 11 11</a
             >
