Flex box portfolio.html-1

--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
     <main>
       <section class="portfolio">
         <div class="container">
-          <h1>Портфолио</h1>
+          <!-- <h1>Портфолио</h1> -->
 
           <ul class="filter">
             <li class="filter-nav list">
@@ -71,10 +71,11 @@
             </li>
           </ul>
 
-          <ul class="list">
+          <ul class="portfolio-list">
             <li>
               <a href="" class="link">
                 <img
+                  class="img"
                   src="./images/portfolio-product-1.jpg"
                   alt="Изображение веб-сайта на ноутбуке"
                 />
@@ -90,6 +91,7 @@
             <li>
               <a href="" class="link">
                 <img
+                  class="img"
                   src="./images/portfolio-product-2.jpg"
                   alt="Постер New Orlean vs Golden Star"
                 />
@@ -107,6 +109,7 @@
             <li>
               <a href="" class="link">
                 <img
+                  class="img"
                   src="./images/portfolio-product-3.jpg"
                   alt="Постер ресторана Seafood"
                 />
@@ -122,6 +125,7 @@
             <li>
               <a href="" class="link">
                 <img
+                  class="img"
                   src="./images/portfolio-product-4.jpg"
                   alt="Изображение наушников"
                 />
@@ -137,6 +141,7 @@
             <li>
               <a href="" class="link">
                 <img
+                  class="img"
                   src="./images/portfolio-product-5.jpg"
                   alt="Изображение коробок"
                 />
@@ -151,7 +156,11 @@
             </li>
             <li>
               <a href="" class="link">
-                <img src="./images/box-3.jpg" alt="Изображение монитора" />
+                <img
+                  class="img"
+                  src="./images/box-3.jpg"
+                  alt="Изображение монитора"
+                />
                 <h2 class="portfolio-title">Inspiration has no Borders</h2>
                 <p class="portfolio-directions">Веб-сайт</p>
                 <p class="portfolio-text">
@@ -164,6 +173,7 @@
             <li>
               <a href="" class="link">
                 <img
+                  class="img"
                   src="./images/portfolio-product-6.jpg"
                   alt="Изображение журнала"
                 />
@@ -179,6 +189,7 @@
             <li>
               <a href="" class="link">
                 <img
+                  class="img"
                   src="./images/portfolio-product-7.jpg"
                   alt="Изображение бирки"
                 />
@@ -193,7 +204,11 @@
             </li>
             <li>
               <a href="" class="link">
-                <img src="./images/box-1.jpg" alt="Изображение ноутбука" />
+                <img
+                  class="img"
+                  src="./images/box-1.jpg"
+                  alt="Изображение ноутбука"
+                />
                 <h2 class="portfolio-title">Growing Business</h2>
                 <p class="portfolio-directions">Приложение</p>
                 <p class="portfolio-text">
@@ -209,31 +224,42 @@
     </main>
     <!-- Футер -->
     <footer class="footer">
-      <div class="container">
-        <div>
-          <a href="" class="logo link">
-            <span class="logo-web link">Web</span> Studio</a
-          >
+      <div class="container footer-main">
+        <div class="logo-contacts">
+          <div class="footer-logo">
+            <a href="" class="logo link">
+              <span class="logo-accent link">Web</span> Studio</a
+            >
+          </div>
+          <div class="contacts">
+            <p class="contacts-text">
+              <span class="adress">г. Киев, пр-т Леси Украинки, 26</span> <br />
+              <span class="mail">info@example.com</span> <br />
+              <span class="phone">+38 099 111 11 11</span> <br />
+            </p>
+          </div>
         </div>
-        <div class="contacts">
-          <p>
-            <span class="adress">г. Киев, пр-т Леси Украинки, 26</span> <br />
-            <span class="mail">info@example.com</span> <br />
-            <span class="phone">+38 099 111 11 11</span> <br />
-          </p>
-        </div>
+
         <div class="social">
-          <p>Присоединяйтесь</p>
-          <ul>
-            <li><a href="" aria-label="Ссылка на Instagram">Инстаграм</a></li>
-            <li><a href="" aria-label="Ссылка на Twitter">Твиттер</a></li>
-            <li><a href="" aria-label="Ссылка на Facebook">Фэйсбук</a></li>
-            <li><a href="" aria-label="Ссылка на LinkedIn">ЛинкедИн</a></li>
+          <p class="text">Присоединяйтесь</p>
+          <ul class="list">
+            <li class="item">
+              <a href="" aria-label="Ссылка на Instagram">Инстаграм</a>
+            </li>
+            <li class="item">
+              <a href="" aria-label="Ссылка на Twitter">Твиттер</a>
+            </li>
+            <li class="item">
+              <a href="" aria-label="Ссылка на Facebook">Фэйсбук</a>
+            </li>
+            <li class="item">
+              <a href="" aria-label="Ссылка на LinkedIn">ЛинкедИн</a>
+            </li>
           </ul>
         </div>
 
         <div class="subscribe">
-          <p>Подпишитесь на рассылку</p>
+          <p class="text">Подпишитесь на рассылку</p>
           <button class="footer-btn">Подписаться</button>
         </div>
       </div>
