--- a/portfolio.html
+++ b/portfolio.html
@@ -71,8 +71,8 @@
             </li>
           </ul>
 
-          <ul class="portfolio-list">
-            <li>
+          <ul class="portfolio-list list">
+            <li class="item">
               <a href="" class="link">
                 <img
                   class="img"
@@ -88,7 +88,7 @@
                 </p>
               </a>
             </li>
-            <li>
+            <li class="item">
               <a href="" class="link">
                 <img
                   class="img"
@@ -106,7 +106,7 @@
                 </p>
               </a>
             </li>
-            <li>
+            <li class="item">
               <a href="" class="link">
                 <img
                   class="img"
@@ -122,7 +122,7 @@
                 </p>
               </a>
             </li>
-            <li>
+            <li class="item">
               <a href="" class="link">
                 <img
                   class="img"
@@ -138,7 +138,7 @@
                 </p>
               </a>
             </li>
-            <li>
+            <li class="item">
               <a href="" class="link">
                 <img
                   class="img"
@@ -154,7 +154,7 @@
                 </p>
               </a>
             </li>
-            <li>
+            <li class="item">
               <a href="" class="link">
                 <img
                   class="img"
@@ -170,7 +170,7 @@
                 </p>
               </a>
             </li>
-            <li>
+            <li class="item">
               <a href="" class="link">
                 <img
                   class="img"
@@ -186,7 +186,7 @@
                 </p>
               </a>
             </li>
-            <li>
+            <li class="item">
               <a href="" class="link">
                 <img
                   class="img"
@@ -202,7 +202,7 @@
                 </p>
               </a>
             </li>
-            <li>
+            <li class="item">
               <a href="" class="link">
                 <img
                   class="img"
