flex-box portfolio.html-3

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       </section>
 
       <!-- Наша команда -->
-      <section class="section team">
+      <section class="section our-team">
         <div class="container">
           <h2 class="section-title">Наша Команда</h2>
 
@@ -135,7 +135,7 @@
               <h3 class="team-title">Николай Кучеренко</h3>
               <p class="team-position">Product Designer</p>
 
-              <ul>
+              <ul class="list">
                 <li>
                   <a href="" aria-label="Ссылка на Инстаграм">Инстаграм</a>
                 </li>
@@ -162,7 +162,7 @@
               <h3 class="team-title">Ольга Иванова</h3>
               <p class="team-position">Frontend Developer</p>
 
-              <ul>
+              <ul class="list">
                 <li>
                   <a href="" aria-label="Ссылка на Инстаграм">Инстаграм</a>
                 </li>
@@ -189,7 +189,7 @@
               <h3 class="team-title">Андрей Шевченко</h3>
               <p class="team-position">Marketing</p>
 
-              <ul>
+              <ul class="list">
                 <li>
                   <a href="" aria-label="Ссылка на Инстаграм">Инстаграм</a>
                 </li>
@@ -216,7 +216,7 @@
               <h3 class="team-title">Иван Николаев</h3>
               <p class="team-position">UI Designer</p>
 
-              <ul>
+              <ul class="list">
                 <li>
                   <a href="" aria-label="Ссылка на Инстаграм">Инстаграм</a>
                 </li>
