--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
     <main>
       <section class="portfolio">
         <div class="container">
-          <!-- <h1>Портфолио</h1> -->
+          <h1>Портфолио</h1>
 
           <ul class="filter">
             <li class="filter-nav list">
