--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <!-- Особенности -->
       <section class="section">
         <div class="container">
-          <h2 class="section-title">Особенности</h2>
+          <h2 class="visually-hiden">Особенности</h2>
 
           <ul class="features-list list">
             <li class="item">
