--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
       <!-- Особенности -->
       <section class="section">
-        <div class="container">
+        <div class="container features">
           <h2 class="visually-hiden">Особенности</h2>
 
           <ul class="features-list list">
