--- a/portfolio.html
+++ b/portfolio.html
@@ -227,7 +227,7 @@
       <div class="container footer-main">
         <div class="logo-contacts">
           <div class="footer-logo">
-            <a href="" class="logo link">
+            <a href="" class="logo-white link">
               <span class="logo-accent link">Web</span> Studio</a
             >
           </div>
